# Hello-world

./: .gitignore  16to10test.cpp  16to10test.h  8 to 10 to 8.cpp  8 to 10 to 8.h  CMakeLists.txt  Fibonacci.cpp  README.md  caculate.cpp  caculate.h  calculate.cpp  calculate.h  calculation.cpp  calculation.h  class理解.cpp  daycalculate (3).cpp  daycalculate (3).h  daycalculate3.cpp  daycalculate3.h  duck.cpp  duck.h  ffzw.cpp  gedebaHe.cpp  grade (2).cpp  grade (2).h  grade.cpp  grade.h  hello.cpp  hello.h  homework.cpp  homework1.cpp  homework1.h  jojochainfuckbill (4).cpp  jojochainfuckbill (4).h  jojochainfuckbill.cpp  jojochainfuckbill.h  leeCode-680.cpp  leetCode-558.cpp  leetCode-680.cpp  loop5.cpp  (+12 more)
.h/: 16to10test.h  Fibonacci.h  class理解.h  ffzw.h  gedebaHe.h  homework.h  jojochainfuckbill.h  leeCode-680.h  leetCode-558.h  new.h  pointer.h  stdmem.h  typeWar.h  use_recursion_to_creat_a_fake_for.h  泰勒展开sinx.h  运算符重载.h
Teach/: 16to10test.cpp  calculation.cpp  duck.cpp  stdmem.cpp
